# agno-poc

./: .env.example  .gitignore  BUILD_LOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.superpowers/sdd/: final-fix-report.md
docs/architecture/: bott-target-architecture.md
docs/superpowers/plans/: 2026-06-17-bott-agentos-dashboard.md  2026-07-01-bott-connectors-drive-calendar.md  2026-07-01-bott-connectors-registry-gmail.md  2026-07-01-bott-connectors-sentry.md  2026-07-01-bott-sentry-triage.md  2026-07-01-bott-skill-engine.md
docs/superpowers/specs/: 2026-06-17-bott-agentos-dashboard-design.md  2026-06-30-bott-build-fix-design.md  2026-07-01-bott-connectors-drive-calendar-design.md  2026-07-01-bott-connectors-registry-gmail-design.md  2026-07-01-bott-connectors-sentry-design.md  2026-07-01-bott-sentry-triage-design.md  2026-07-01-bott-skill-engine-design.md
migrations/: README.md  env.py
migrations/versions/: 64ffdef3405b_approvals_payload_column.py  db8adee52d1d_baseline_foundation_schema.py  ff2fba0db239_catch_up_settings_dedup_review_traces_.py
scripts/: eval_build.py  eval_cases.json  eval_codex.py  eval_reviews.py  isolation_test.py  mirror_review_branch.sh  run-workspace-b.sh  run_server.sh  set_app_webhook.py  setup_schedules.py
src/bott/: __init__.py
src/bott/agents/: __init__.py  bott_agent.py  personality.py
src/bott/agents/build_fix/: __init__.py  member.py  pipeline.py  planner.py  planning.py  refs.py  rendering.py
src/bott/agents/code_review/: __init__.py  cli.py  member.py  pr_ref.py  webhook.py
src/bott/agents/triage/: __init__.py  member.py  rendering.py  triage.py
src/bott/interfaces/: __init__.py  agentos.py  app.py  server.py  slack_app.py
src/bott/interfaces/slack_home/: __init__.py  blocks.py  cron.py  engagements.py  models.py  router.py  service.py
src/bott/manager/: __init__.py  manager.py  personality.py
src/bott/shared/: __init__.py  approvals.py  codex.py  codex_model.py  codex_tokens.py  config.py  db.py  identity.py  model.py  mrkdwn.py  sandbox.py  schema.py  secrets.py
src/bott/shared/context/: __init__.py  memra.py
src/bott/shared/integrations/: __init__.py  jira.py  sentry.py  spin.py
src/bott/shared/observability/: logging_setup.py
src/bott/shared/persistence/: queue.py  records.py  skills_store.py  (+2 more)
src/bott/skills/: __init__.py  advisories.py  dsm.py  engagement_data.py  scheduling.py  skill_authoring.py  web_publish.py  workspace_tools.py
src/pr_reviewer/: __init__.py  config.py  intake.py
src/pr_reviewer/agent/: diff_hunks.py  noise.py
src/pr_reviewer/core/: pipeline.py  runner.py  verdict_gate.py
src/pr_reviewer/github/: app_auth.py  client.py  clone.py  fetch_essentials.py
src/pr_reviewer/interfaces/: cli.py  server.py  slack_app.py  webhook.py
src/pr_reviewer/orchestration/: __init__.py  code_review_agent.py  manager.py
src/pr_reviewer/persistence/: store.py
src/pr_reviewer/rendering/: github.py
tests/: conftest.py  test_advisories.py  test_agentos_app.py  test_agentos_auth.py  test_app_construct.py  test_approvals.py  test_bott_settings.py  test_build_agent.py  test_build_implement_tools.py  test_build_member.py  test_build_pipeline.py  test_build_planner.py  test_build_planning.py  test_build_refs.py  test_build_wiring.py  test_code_review_member.py  test_codex_backend.py  test_codex_base_url.py  test_codex_model.py  test_codex_tokens.py  test_connector_registry.py  test_connectors_calendar.py  test_connectors_confluence.py  test_connectors_drive.py  test_connectors_gmail.py  test_connectors_jira.py  test_connectors_sentry.py  test_connectors_slack.py  test_connectors_wiring.py  test_cost.py  test_db_selector.py  test_diff_hunks.py  test_dsm.py  test_engagement_data.py  test_foundation_config.py  test_github_token.py  test_github_write.py  test_hardening.py  test_identity.py  test_intake.py  (+47 more)
(+36 files in other folders)
