[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Agno-powered PR review application — CLI, Slack bot, and GitHub webhook."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno==2.6.13",
    "openai==2.41.1",
    "slack-bolt==1.28.0",
    "slack-sdk==3.42.0",
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pyjwt==2.13.0",
    "cryptography==49.0.0",
    "SQLAlchemy==2.0.51",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "certifi==2026.5.20",
    "aiohttp>=3.10",
    "pygithub>=2.9.1",
    "atlassian-python-api>=4.0.7",
    "croniter==6.2.2",
    "pytz==2026.2",
    "alembic==1.18.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "ruff>=0.6",
]

[project.scripts]
bott-app = "bott.interfaces.app:main"          # the whole POC: agent + Slack + scheduler + webhook
pr-review = "bott.agents.code_review.cli:main"  # CLI dry-run of a single PR review (posts nothing)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations/"]

[tool.ruff.lint]
# Match the existing codebase style (already PEP8-ish); start lenient, tighten later.
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines exist in prompt/render strings; not worth churning now

[tool.ruff.lint.per-file-ignores]
# slack_app must set SSL_CERT_FILE / load .env before importing slack_sdk (which uses
# urllib, not httpx) — imports are deliberately placed after that setup.
"src/bott/interfaces/slack_app.py" = ["E402"]
"src/bott/interfaces/agentos.py" = ["E402"]
"src/bott/interfaces/app.py" = ["E402"]
# Pre-existing single-letter loop vars in ported code; harmless, not worth churning.
"src/bott/agents/code_review/agent/prompt.py" = ["E741"]
"src/bott/agents/code_review/core/verdict_gate.py" = ["E741"]
# Compact test fixtures use inline statements.
"tests/test_webhook.py" = ["E702"]
